# Linguae

./: .dockerignore  .gitignore  Dockerfile  DownloadConceptnetNumberbatchVectors.sh  DownloadMUSEWordEmbeddings.sh  DownloadTatoebaSentences.sh  InstallSpacyModels.sh  README.md  Use_case.md  examples.py  requirements.txt  setup.cfg
docs/: Readme.md  conf.py  examples.rst  index.rst  linguae.LLM.rst  linguae.audioSamples.rst  linguae.chatbot.rst  linguae.conceptnet.rst  linguae.concordance.rst  linguae.data.chatterbotFiles.rst  linguae.data.museWordVectors.rst  linguae.data.rst  linguae.data.sentimentFiles.rst  linguae.data.tatoebaFiles.rst  linguae.dictionary.rst  linguae.fillMask.rst  linguae.image.rst  linguae.languages.rst  linguae.ner.rst  linguae.news.rst  linguae.numspell.rst  linguae.parsing.rst  linguae.report.rst  linguae.rst  linguae.sentenceVector.rst  linguae.sentiment.rst  linguae.spellChecker.rst  linguae.stemming.rst  linguae.syllables.rst  linguae.tatoeba.rst  linguae.text2speech.rst  linguae.textGeneration.rst  linguae.textSamples.rst  linguae.translation.rst  linguae.verbConjugation.rst  linguae.wikipediaQuery.rst  linguae.wordFrequency.rst  linguae.wordLists.rst  linguae.wordVector.rst  modules.rst
linguae/: Readme.md  __init__.py
linguae/LLM/: LLM.py  Readme.md  __init__.py
linguae/audioSamples/: Readme.md  __init__.py  audioSamples.py
linguae/chatbot/: Readme.md  __init__.py  chatbot.py
linguae/conceptnet/: Readme.md  __init__.py  conceptnet.py
linguae/concordance/: Readme.md  __init__.py  concordance.py
linguae/data/: __init__.py  (+6 more)
(+95 files in other folders)
