[metadata]
name = linguae
version = attr: linguae.__version__
url = https://github.com/ajdavidl/Linguae
description = Python package to explore natural languages. 
long_description = file: README.md
long_description_content_type = text/markdown
author = Antonio David
license = GNU General Public License v3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = NLP, natural_language
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    feedparser
	gensim
	nltk
	pandas
	pyhyphen
	sentence_transformers
	spacy
	spacy_dbpedia_spotlight
	textblob
	transformers
	verbecc
	wikipedia
	Wikipedia-API
	WiktionaryParser
	wordfreq

[options.packages.find]
exclude =
    examples*
    docs*
